# DaMagus26-hse_ai_ba_project

./: .gitignore  hw_3.ipynb  hw_3_eda.ipynb  hw_3_ml.ipynb  pyproject.toml  Методчика для Проекта и защиты проекта.docx
outputs/: customer_clusters.csv  forecast_backtest_and_future.csv  model_comparison.csv  superstore_with_clusters.csv
